--- a/style.css
+++ b/style.css
@@ -1,3 +1,26 @@
+* {margin: 0; padding: 0;}
 body {
-background-color: #FAFAD2;
+	text-align: center;
+	background: #E0FFFF url("prog-time.png") repeat fixed;
+	text-align: left; 
+}
+div {
+	background: rgba(248, 248, 255, 0.9);
+	padding: 30px;
+	padding-left: 40px;
+	width: 850px; 
+	margin: 40px auto; 
+}
+h2 {
+	text-align: center;
+	color: #191970;
+}
+h3 {
+	color: #000080;
+}
+b {
+	color: #000080;
+}
+a{
+	color: #006400;
 }
