small changes in the form

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 * {margin: 0; padding: 0;}
 body {
 	text-align: center;
-	background: #E0FFFF url("prog-time.png") repeat fixed;
+	background: #E0FFFF url("devapp.png") no-repeat fixed;
 	text-align: left; 
 }
 div {
