--- a/style.css
+++ b/style.css
@@ -1,36 +1,55 @@
 * {margin: 0; padding: 0;}
-body {
-	text-align: center;
-	background: #FFF url("devapp.png") no-repeat fixed;
-	text-align: left; 
-	background-size: 100% 100%;
+
+ body {
+		background: #FFF  url("desktop.png") no-repeat fixed;
+		background-size: 100% 100%;
+		text-align: left; 
 }
 div {
-	background: rgba(248, 248, 255, 0.9);
-	padding: 30px;
-	padding-left: 40px;
+	background: rgba(248, 248, 255, 0.91);
+	margin: 40px auto;
+	padding: 40px;
+	padding-bottom: 45px;
+	padding-top: 45px;
 	width: 850px; 
-	margin: 40px auto; 
 }
 h1 {
-	text-align: center;
 	color: #191970;
 	font-size: 2.2em;
 	font: small-caps bold 2.2em georgia, "times new roman", serif;
+	letter-spacing: 0.6px;
+	text-align: center;
 }
 h2 {
-	text-align: center;
 	color: #191970;
 	font: bold 1.4em georgia, "times new roman", serif;
+	letter-spacing: 0.4px;
+	text-align: center;
 }
 
 h3 {
 	color: #000080;
 	font: bold 1.1em georgia, "times new roman", serif;
+	letter-spacing: 0.2px;
 }
 b {
 	color: #000080;
 }
-a{
+a {
 	color: #006400;
+}
+p {
+	text-align: justify;
+	text-indent: 30px;
+}
+th {
+	background-color: rgba(210, 105, 30, 0.5);
+	color: #191970;	  
+	text-align: center;
+	vertical-align: middle;
+}
+td {
+	background-color: rgba(210, 105, 30, 0.15);
+	text-align: center;
+	vertical-align: middle;
 }
