--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 * {margin: 0; padding: 0;}
 
  body {
-		background: #FFF  url("desktop.png") no-repeat fixed;
+		background: #FFF  url("cactus.png") no-repeat fixed;
 		background-size: 100% 100%;
 		text-align: left; 
 }
@@ -10,7 +10,7 @@ div {
 	margin: 40px auto;
 	padding: 40px;
 	padding-bottom: 45px;
-	padding-top: 45px;
+	padding-top: 50px;
 	width: 850px; 
 }
 h1 {
