--- a/style.css
+++ b/style.css
@@ -35,9 +35,6 @@ h3 {
 b {
 	color: #000080;
 }
-a {
-	color: #006400;
-}
 p {
 	text-align: justify;
 	text-indent: 30px;
@@ -52,4 +49,17 @@ td {
 	background-color: rgba(210, 105, 30, 0.15);
 	text-align: center;
 	vertical-align: middle;
+}
+a:link {
+	color: #006400;
+	text-decoration:none;
+}
+a:visited {
+	color: #483D8B;
+	text-decoration:none;
+}
+a:hover {
+	color: #1E90FF;
+	font-style: italic;
+	text-decoration: underline;
 }
