--- a/style.css
+++ b/style.css
@@ -24,7 +24,9 @@ h2 {
 	color: #191970;
 	font: bold 1.4em georgia, "times new roman", serif;
 	letter-spacing: 0.4px;
-	text-align: center;
+	padding-bottom: 1%;
+	padding-left: 12%;
+	text-align: left;
 }
 
 h3 {
@@ -62,4 +64,32 @@ a:hover {
 	color: #1E90FF;
 	font-style: italic;
 	text-decoration: underline;
+}
+#text-in-frame {
+	background: rgba(248, 248, 255, 0); 
+	border: 2px solid #191970;
+	margin: 20px; 
+	margin-left: 5px;
+	padding: 15;
+	padding-left: 35;  
+	width: 40%;  
+}
+#image-programmer {
+	padding-left: 30%;
+	width: 40%;
+}
+#warning{
+	border: 1px solid black;
+	width: 90%;
+}
+a.external-links{
+	text-decoration: underline;
+}
+h2.sayings {
+	color: #191970;
+	font: bold 1.4em georgia, "times new roman", serif;
+	letter-spacing: 0.4px;
+	padding: 2%;
+	padding-top: 0;
+	text-align: center;
 }
