--- a/style.css
+++ b/style.css
@@ -7,23 +7,23 @@
 }
 div {
 	background: rgba(248, 248, 255, 0.91);
-	margin: 40px auto;
-	padding: 40px;
-	padding-bottom: 45px;
-	padding-top: 50px;
-	width: 850px; 
+	margin: 2.6% auto;
+	padding: 2.6%;
+	padding-bottom: 2.9%;
+	padding-top: 2.8%;
+	width: 54%; 
 }
 h1 {
 	color: #191970;
 	font-size: 2.2em;
 	font: small-caps bold 2.2em georgia, "times new roman", serif;
-	letter-spacing: 0.6px;
+	letter-spacing: 0.01em;
 	text-align: center;
 }
 h2 {
 	color: #191970;
 	font: bold 1.4em georgia, "times new roman", serif;
-	letter-spacing: 0.4px;
+	letter-spacing: 0.01em;
 	padding-bottom: 1%;
 	padding-left: 12%;
 	text-align: left;
@@ -42,15 +42,51 @@ p {
 	text-indent: 30px;
 }
 th {
-	background-color: rgba(210, 105, 30, 0.5);
-	color: #191970;	  
-	text-align: center;
-	vertical-align: middle;
+	background-color: rgba(139, 0, 0, 0.70);
+	border-right: 2.5px solid rgba(248, 248, 255, 0.91);
+	color: rgba(255, 255, 255, 0.9);
+	font-size: 20px;
+	font-weight: 600;
+	padding: 4.5px;
+	text-shadow: 0 1.2px 1.2px #2D2020;
 }
 td {
-	background-color: rgba(210, 105, 30, 0.15);
-	text-align: center;
-	vertical-align: middle;
+	background-color: rgba(139, 0, 0, 0.15);
+	border: 2.5px solid rgba(248, 248, 255, 0.91);
+	padding: 4px;
+	padding-left: 5px;
+	padding-right: 5px;
+}
+th:first-child {
+	border-top-left-radius: 8px;
+	border-bottom-left-radius: 8px;
+}
+th:last-child {
+	border-top-right-radius: 8px;
+	border-bottom-right-radius: 8px;
+	border-right: none;
+	border-bottom: none;
+}
+tr:nth-child(2) td:first-child  {
+border-top-left-radius: 8px;
+}
+tr:last-child td:first-child {
+border-bottom-left-radius: 8px;
+border-bottom: none;
+border-top: none;
+}
+tr:nth-child(2) td:last-child {
+border-top-right-radius: 8px;
+}
+tr:last-child td:last-child {
+border-bottom-right-radius: 8px;
+border-bottom: none;
+}
+tr td:last-child {
+border-right: none;
+}
+tr td:first-child {
+border-left: none;
 }
 a:link {
 	color: #006400;
@@ -65,6 +101,12 @@ a:hover {
 	font-style: italic;
 	text-decoration: underline;
 }
+figure.img-center{
+	text-align: center;
+}
+img.image-programmer{
+width: 40%;
+}
 #text-in-frame {
 	background: rgba(248, 248, 255, 0); 
 	border: 2px solid #191970;
@@ -74,13 +116,13 @@ a:hover {
 	padding-left: 35;  
 	width: 40%;  
 }
-#image-programmer {
-	padding-left: 30%;
-	width: 40%;
-}
-#warning{
-	border: 1px solid black;
-	width: 90%;
+#pros-cons{
+	border-collapse: collapse;
+	font-family: "Gill Sans", "Trebuchet MS", sans-serif, sans-serif;
+	font-size: 18px;
+	text-align: center;
+	vertical-align: middle;
+	width: 85%;
 }
 a.external-links{
 	text-decoration: underline;
@@ -92,4 +134,7 @@ h2.sayings {
 	padding: 2%;
 	padding-top: 0;
 	text-align: center;
+}
+span.outline{
+	text-decoration: line-through;
 }
