--- a/style.css
+++ b/style.css
@@ -1,26 +1,39 @@
 * {margin: 0; padding: 0;}
 
- body {
-		background: #FFF  url("cactus.png") no-repeat fixed;
-		background-size: 100% 100%;
-		text-align: left; 
+body {
+	background: #FFF  url("cactus.png") no-repeat fixed;
+	background-size: 100% 100%;
+	text-align: left; 
 }
-div {
+div.page {
 	background: rgba(248, 248, 255, 0.91);
 	margin: 2.6% auto;
 	padding: 2.6%;
 	padding-bottom: 2.9%;
-	padding-top: 2.8%;
-	width: 54%; 
+	padding-top: 2.9%;
+	width: 800px; 
 }
-h1 {
+figure.img-center{
+	text-align: center;
+}
+figure.rightimg {
+    float: right;
+    margin-top: 0.7%;
+    margin-left: 2%;
+    text-align: right;
+    width: 18%;
+}
+span.outline{
+	text-decoration: line-through;
+}
+h1.article {
 	color: #191970;
 	font-size: 2.2em;
 	font: small-caps bold 2.2em georgia, "times new roman", serif;
 	letter-spacing: 0.01em;
 	text-align: center;
 }
-h2 {
+h2.item {
 	color: #191970;
 	font: bold 1.4em georgia, "times new roman", serif;
 	letter-spacing: 0.01em;
@@ -28,11 +41,26 @@ h2 {
 	padding-left: 12%;
 	text-align: left;
 }
-
-h3 {
+h2.sayings {
+	color: #191970;
+	font: bold 1.4em georgia, "times new roman", serif;
+	letter-spacing: 0.4px;
+	padding: 2%;
+	padding-top: 0;
+	text-align: center;
+}
+h3.mini-item {
 	color: #000080;
 	font: bold 1.1em georgia, "times new roman", serif;
 	letter-spacing: 0.2px;
+}
+h4.writing {
+	color: #000080;
+	font: bold 1em georgia, "times new roman", serif;
+	letter-spacing: 0.15px;
+	padding-top: 1.8%;
+	text-align: center;
+	text-indent: 0;
 }
 b {
 	color: #000080;
@@ -68,28 +96,28 @@ th:last-child {
 	border-bottom: none;
 }
 tr:nth-child(2) td:first-child  {
-border-top-left-radius: 8px;
+	border-top-left-radius: 8px;
 }
 tr:last-child td:first-child {
-border-bottom-left-radius: 8px;
-border-bottom: none;
-border-top: none;
+	border-bottom-left-radius: 8px;
+	border-bottom: none;
+	border-top: none;
 }
 tr:nth-child(2) td:last-child {
-border-top-right-radius: 8px;
+	border-top-right-radius: 8px;
 }
 tr:last-child td:last-child {
-border-bottom-right-radius: 8px;
-border-bottom: none;
+	border-bottom-right-radius: 8px;
+	border-bottom: none;
 }
 tr td:last-child {
-border-right: none;
+	border-right: none;
 }
 tr td:first-child {
-border-left: none;
+	border-left: none;
 }
 a:link {
-	color: #006400;
+	color: #1E90FF;
 	text-decoration:none;
 }
 a:visited {
@@ -97,20 +125,19 @@ a:visited {
 	text-decoration:none;
 }
 a:hover {
-	color: #1E90FF;
+	color: #006400;
 	font-style: italic;
+}
+a.external-links{
 	text-decoration: underline;
 }
-figure.img-center{
-	text-align: center;
-}
 img.image-programmer{
-width: 40%;
+	width: 40%;
 }
 #text-in-frame {
 	background: rgba(248, 248, 255, 0); 
-	border: 2px solid #191970;
-	margin: 20px; 
+	border: 4px double #191970;
+	margin: 2% 0 2% 0; 
 	margin-left: 5px;
 	padding: 15;
 	padding-left: 35;  
@@ -120,21 +147,11 @@ width: 40%;
 	border-collapse: collapse;
 	font-family: "Gill Sans", "Trebuchet MS", sans-serif, sans-serif;
 	font-size: 18px;
+	margin: auto;
 	text-align: center;
 	vertical-align: middle;
-	width: 85%;
+	width: 88%;
 }
-a.external-links{
-	text-decoration: underline;
-}
-h2.sayings {
-	color: #191970;
-	font: bold 1.4em georgia, "times new roman", serif;
-	letter-spacing: 0.4px;
-	padding: 2%;
-	padding-top: 0;
-	text-align: center;
-}
-span.outline{
-	text-decoration: line-through;
+#ada-lovelace{
+	width: 100%;
 }
