--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ figure.rightimg {
     float: right;
     margin-top: 0.7%;
     margin-left: 2%;
+    margin-bottom: 2.7%;
     text-align: right;
     width: 18%;
 }
@@ -134,6 +135,9 @@ a.external-links{
 img.image-programmer{
 	width: 40%;
 }
+img.portrait {
+	width: 100%;
+}
 #text-in-frame {
 	background: rgba(248, 248, 255, 0); 
 	border: 4px double #191970;
@@ -151,7 +155,4 @@ img.image-programmer{
 	text-align: center;
 	vertical-align: middle;
 	width: 88%;
-}
-#ada-lovelace{
-	width: 100%;
 }
