--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ div.page {
 	padding: 2.6%;
 	padding-bottom: 2.9%;
 	padding-top: 2.9%;
+	position: relative;
 	width: 800px; 
 }
 figure.img-center{
@@ -155,4 +156,16 @@ img.portrait {
 	text-align: center;
 	vertical-align: middle;
 	width: 88%;
+}
+#pac1 {
+	width: 10%;
+	opacity: 0.65;
+	z-index: 1;
+	position: absolute;
+	left: 75%;
+	top: 295px;
+}
+.slice {
+	position: relative;
+	z-index: 2;  
 }
