--- a/style.css
+++ b/style.css
@@ -5,55 +5,52 @@ body {
 	background-size: 100% 100%;
 	text-align: left; 
 }
-div.page {
+footer {
+	font-size: 16px;
+	margin-bottom: 1.2%;
+	text-align: center;
+}
+main{
 	background: rgba(248, 248, 255, 0.91);
-	margin: 2.6% auto;
-	padding: 2.6%;
-	padding-bottom: 2.9%;
-	padding-top: 2.9%;
-	width: 52%; 
+	margin-top: 2.6%;
+	margin-left: 21%;
+	margin-right: 21%;
+	margin-bottom: 2.4%;
+	padding-top: 1.5%;
+	padding-bottom: 2.4%;
+	padding-right: 2.6%;
+	padding-left: 2.6%;
 }
-figure.img-center{
-	text-align: center;
+a:hover {
+	color: #006400;
+	font-style: italic;
 }
-span.outline{
-	text-decoration: line-through;
+a:link {
+	color: #1E90FF;
+	text-decoration:none;
 }
-h1.article {
-	color: #191970;
-	font-size: 2.2em;
-	font: small-caps bold 2.2em georgia, "times new roman", serif;
-	letter-spacing: 0.01em;
-	text-align: center;
-}
-h2.item {
-	color: #191970;
-	font: bold 1.4em georgia, "times new roman", serif;
-	letter-spacing: 0.01em;
-	padding-bottom: 1%;
-	padding-left: 12%;
-	padding-top: 3%;
-	text-align: left;
-}
-h2.sayings {
-	color: #191970;
-	font: bold 1.4em georgia, "times new roman", serif;
-	letter-spacing: 0.4px;
-	padding: 2%;
-	padding-top: 0;
-	text-align: center;
-}
-h3.mini-item {
-	color: #000080;
-	font: bold 1.1em georgia, "times new roman", serif;
-	letter-spacing: 0.2px;
+a:visited {
+	color: #483D8B;
+	text-decoration:none;
 }
 b {
 	color: #000080;
 }
+blockquote {
+	padding-bottom: 1%;
+	padding-top: 2%;
+	text-align: justify;
+	text-indent: 30px;
+}
+cite{
+	padding-left: 75%;
+}
 p {
 	text-align: justify;
 	text-indent: 30px;
+}
+section{
+	padding-top: 3%;
 }
 th {
 	background-color: rgba(139, 0, 0, 0.70);
@@ -102,63 +99,41 @@ tr td:last-child {
 tr td:first-child {
 	border-left: none;
 }
-a:link {
-	color: #1E90FF;
-	text-decoration:none;
-}
-a:visited {
-	color: #483D8B;
-	text-decoration:none;
-}
-a:hover {
-	color: #006400;
-	font-style: italic;
-}
-a.external-links{
-	text-decoration: underline;
-}
-img.image-programmer{
-	width: 40%;
-}
-#primar {
-	width: 5.7%;
-	opacity: 0.67;
-	z-index: 1;
-	position: absolute;
-	left: 64.5%;
-	top: 41.9%;
-}
-.slice {
-	position: relative;
-	z-index: 2;  
-}
-#text-in-frame {
-	background: rgba(248, 248, 255, 0); 
-	border: 4px double #191970;
-	margin: 2% 0 2% 0; 
-	margin-left: 5px;
-	padding: 15;
-	padding-left: 35;  
-	width: 40%;  
-}
-#pros-cons{
-	border-collapse: collapse;
-	font-family: "Gill Sans", "Trebuchet MS", sans-serif, sans-serif;
-	font-size: 18px;
-	margin: auto;
+.article {
+	color: #191970;
+	font: small-caps bold 46px georgia, "times new roman", serif;
+	letter-spacing: 0.8px;
 	text-align: center;
-	vertical-align: middle;
-	width: 88%;
 }
 .continue-page:after {
 	content: ' ';
 	clear: both;
 	display: block;
 }
-#block-history{
-	float: right;
-	width: 40%;
-	margin-bottom: 0.3%;
+.external-links{
+	text-decoration: underline;
+}
+.img-center{
+	text-align: center;
+}
+.item {
+	color: #191970;
+	font: bold 28px georgia, "times new roman", serif;
+	letter-spacing: 0.4px;
+	padding-bottom: 1%;
+	padding-left: 12%;
+	text-align: left;
+}
+.mini-item {
+	color: #000080;
+	font: bold 1.1em georgia, "times new roman", serif;
+	letter-spacing: 0.2px;
+}
+.outline{
+	text-decoration: line-through;
+}
+.portrait {
+	width: 100%;
 }
 .rightimg {
 	float: right;
@@ -166,8 +141,17 @@ img.image-programmer{
     margin-left: 4%;
     width: 46%;
 }
-.portrait {
-	width: 100%;
+.sayings {
+	color: #191970;
+	font: bold 1.4em georgia, "times new roman", serif;
+	letter-spacing: 0.4px;
+	padding: 2%;
+	padding-top: 0;
+	text-align: center;
+}
+.slice {
+	position: relative;
+	z-index: 2;  
 }
 .writing {
 	color: #000080;
@@ -180,6 +164,40 @@ img.image-programmer{
 #ada-caption {
 	padding-top: 9%;
 }
+#block-history{
+	float: right;
+	width: 40%;
+	margin-bottom: 0.3%;
+}
 #charles-caption {
 	padding-top: 1%;
+}
+#image-programmer{
+	width: 40%;
+}
+#primar {
+	width: 5.7%;
+	opacity: 0.67;
+	z-index: 1;
+	position: absolute;
+	left: 64.5%;
+	top: 42.6%;
+}
+#pros-cons{
+	border-collapse: collapse;
+	font-family: "Gill Sans", "Trebuchet MS", sans-serif, sans-serif;
+	font-size: 18px;
+	margin: auto;
+	text-align: center;
+	vertical-align: middle;
+	width: 88%;
+}
+#text-in-frame {
+	background: rgba(248, 248, 255, 0); 
+	border: 4px double #191970;
+	margin: 2% 0 2% 0; 
+	margin-left: 5px;
+	padding: 15px;
+	padding-left: 35px;  
+	width: 40%;  
 }
