--- a/style.css
+++ b/style.css
@@ -1,24 +1,28 @@
 * {margin: 0; padding: 0;}
 
 body {
-	background: #FFF  url("pictures/cactus.png") no-repeat fixed;
+	background: rgba(224, 255, 255, 0.2);
 	background-size: 100% 100%;
 	text-align: left; 
 }
 footer {
+	color: #191970;
 	font-size: 16px;
 	margin-bottom: 1.2%;
+	margin-top: 1.8%;
 	text-align: center;
 }
 main{
-	background: rgba(248, 248, 255, 0.91);
+	background: rgba(255, 255, 255, 0.9);
+	margin-bottom: 1.2%;
 	margin-left: 21%;
-	margin-right: 21%;
-	margin-bottom: 2.4%;
-	padding-top: 1.5%;
+	padding-top: 0.7%;
 	padding-bottom: 2.4%;
 	padding-right: 2.6%;
 	padding-left: 2.6%;
+	width: 58%;
+	border: 1px solid #191970;
+	border-right: 1px solid #191970; 
 }
 a:link {
 	color: #1E90FF;
@@ -56,16 +60,16 @@ section{
 }
 th {
 	background-color: rgba(139, 0, 0, 0.70);
-	border-right: 2.5px solid rgba(248, 248, 255, 0.91);
-	color: rgba(255, 255, 255, 0.9);
+	border-right: 2.5px solid rgba(248, 248, 255, 1);
+	color: white;
 	font-size: 20px;
 	font-weight: 600;
 	padding: 4.5px;
-	text-shadow: 0 1.2px 1.2px #2D2020;
+	text-shadow: 0 2px 2px #2D2020;
 }
 td {
 	background-color: rgba(139, 0, 0, 0.15);
-	border: 2.5px solid rgba(248, 248, 255, 0.91);
+	border: 2.5px solid rgba(248, 248, 255, 1);
 	padding: 4px;
 	padding-left: 5px;
 	padding-right: 5px;
@@ -126,42 +130,40 @@ tr td:first-child {
 	padding-left: 12%;
 	text-align: left;
 }
+.mini-item {
+	color: #000080;
+	font: bold 1.1em georgia, "times new roman", serif;
+	letter-spacing: 0.2px;
+}
 .nav-page {
-	background: #F5F5DC;
-	opacity: 0.95;
-  box-shadow: 0 1px 0 1px rgba(0, 0, 0, 0.2);
-  border-radius: 10px;
+	background: #191970;
   display: flex;
-  margin: 4px 19% 8px 19%;
-  padding: 15px 6% 12px 6%;
+  margin-bottom: 4px;
+  padding: 2px 95px;
 }
 .menu li {
   display: inline-block;
-  margin-right: 45px;
+  margin-right: 32px;
   padding: 5px;
+  padding-top: 8px;
 }
 .menu li a {
   font-weight: bold;
-  font-size: 32px;
-  color: #228B22;
+  font-size: 24px;
+  color: white;
   font-style: italic;
   font-family: century, serif;
   text-shadow: 0 1px 1px black;
 }
 .menu a:hover {
-	font-style: normal;
+	color: rgba(135, 206, 235, 1);
 }
 .navbar-logo {
 	display: inline-block;
 }
 .img-logo {
-	width: 80px;
-	padding-right: 58px;
-}
-.mini-item {
-	color: #000080;
-	font: bold 1.1em georgia, "times new roman", serif;
-	letter-spacing: 0.2px;
+	width: 42px;
+	padding-right: 34px;
 }
 .outline{
 	text-decoration: line-through;
@@ -211,11 +213,11 @@ tr td:first-child {
 }
 #primar {
 	width: 5.7%;
-	opacity: 0.67;
+	opacity: 0.7;
 	z-index: 1;
 	position: absolute;
-	left: 64.5%;
-	top: 42.6%;
+	left: 66.5%;
+	top: 11.2%;
 }
 #pros-cons{
 	border-collapse: collapse;
