--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ tr td:first-child {
 .external-links{
 	text-decoration: underline;
 }
-.img-center{
+.center{
 	text-align: center;
 }
 .item {
@@ -128,12 +128,16 @@ tr td:first-child {
 	letter-spacing: 0.4px;
 	padding-bottom: 1%;
 	padding-left: 12%;
-	text-align: left;
+}
+.mini-item-frame {
+	color: #000080;
+	font: bold 22px georgia, "times new roman", serif;
+	letter-spacing: 0.2px;
 }
 .mini-item {
 	color: #000080;
-	font: bold 1.1em georgia, "times new roman", serif;
-	letter-spacing: 0.2px;
+	font: bold 22px georgia, "times new roman", serif;
+	padding: 0.7% 8%;
 }
 .nav-page {
 	background: #191970;
@@ -197,6 +201,10 @@ tr td:first-child {
 	text-align: center;
 	text-indent: 0;
 }
+.form {
+	margin: 1% 0;
+	text-align: center;
+}
 #ada-caption {
 	padding-top: 9%;
 }
@@ -217,7 +225,7 @@ tr td:first-child {
 	z-index: 1;
 	position: absolute;
 	left: 66.5%;
-	top: 11.2%;
+	top: 10.8%;
 }
 #pros-cons{
 	border-collapse: collapse;
